fixed video image alignment issue on video page

--- a/src/app/components/video-card/video-card.component.scss
+++ b/src/app/components/video-card/video-card.component.scss
@@ -8,7 +8,7 @@
 
 .thumbnailImage {
   align-self: center;
-  width: 320px;
+  width: 100%;
 }
 
 .video-card-footer {
